<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Upload from Gallery</string>
    <string name="analyze">Start to Analyze</string>
    <string name="result">Analyze Result</string>
    <string name="classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="text_icon_1">explore</string>
    <string name="text_icon_3">history</string>
    <string name="description">12/12/2023</string>
    <string name="label_name">Cancer</string>
    <string name="input_image">input image</string>
    <string name="articles">Articles</string>
    <string name="title">title</string>
    <string name="score_value">908463</string>
    <string name="result_image">result image</string>
    <string name="save_to_history">Save to history</string>
    <string name="history_result">History Result</string>
    <string name="there_is_no_history">There is no history</string>
    <string name="date">Date :</string>
    <string name="example_date">12/12/12</string>
    <string name="image_article">image article</string>
</resources>